--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "proxy": "https://realtime-socket-app-sei125.herokuapp.com/",
   "name": "client",
   "version": "0.1.0",
   "private": true,
@@ -8,7 +9,9 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "socket.io-client": "^4.0.0",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
